--- a/basics/templates/basics/help.html
+++ b/basics/templates/basics/help.html
@@ -2,10 +2,73 @@
 
 {% block content %}
 <!-- Introduction Row -->
+       <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Help</h1>
+                <h1 class="page-header">FAQ
+                    <small>How does it work?</small>
+                </h1>
+
+                <ol>
+                <li><p><a href="#1">How does it work?</a></p></li>
+                <li><p><a href="#2">How does it work?</a></p></li>
+                <li><p><a href="#3">How does it work?</a></p></li>
+                <li><p><a href="#4">How does it work?</a></p></li>
+                <li><p><a href="#5">How does it work?</a></p></li>
+                <li><p><a href="#6">How does it work?</a></p></li>
+                <li><p><a href="#7">How does it work?</a></p></li>
+                <li><p><a href="#8">How does it work?</a></p></li>
+                <li><p><a href="#9">How does it work?</a></p></li>
+                <li><p><a href="#10">How does it work?</a></p></li>
+                <li><p><a href="#11">How does it work?</a></p></li>
+            	</ol>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h3 class="section"><a name="1">1</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="2">2</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="3">3</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="4">4</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="5">5</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="6">6</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="7">7</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="8">8</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="9">9</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="10">10</a> How does it work?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+            </div>
+             <div class="col-lg-12">
+                <h3 class="section"><a name="11">11</a> How does it work?</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
             </div>
         </div>
+
 {% endblock %}
