--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -4,47 +4,26 @@
 <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Your Profile</h1>
-
-		<p> Note that your profile is exclusively visible for yourself! </p>
-		
-
-        	<div style="height:150px; width:150px; float:right; padding-right:450px;padding-top:20px;">
-			{% load staticfiles %}
-           		<img src={% static 'basics/images/profil.jpg' %} />	
+                <h1 class="page-header">Your Profile <small>Note that your profile is exclusively visible for yourself!</small></h1>
         	</div>
-
-		<div style="width:350px; float:left; padding-left:50px;">
-			<table style="width:60%;float:left;">
-  			<tr>
-    				<td><b>Name</b></td>
-				<td><b>:</b>{{Userdata.pseudonym}}<td>
-			<tr>
-			<tr>
-    				<td><b>Email</b></td>
-				<td><b>:</b>{{Userdata.email}}<td>
-			<tr>
-			<tr>
-    				<td><b>Phonenumber</b></td>
-				<td><b>:</b>{{Userdata.phone}}<td>
-			<tr>
-			<tr></tr>
-			<tr>
-    				<td><b>Registered since</b></td>
-				<td><b>:</b>{{Userdata.registertate}}<td>
-			<tr>
-    
-			</table>
-	
-                </div>
-
-		<div align="left" style="padding-top:110px;padding-left:10px;"> 
-
-	<button type="button" class="btn btn-danger btn-xs">Delete my profile</button> <button type="button" class="btn btn-warning btn-xs">Edit my profile</button>
-
-		</div>
-
-		
         </div>
+        <div class="row">
+        	<div class="col-lg-4 col-lg-offset-1">
+        		<br>
+				<b>Name: {{Userdata.pseudonym}}</b>  <br>
+				<b>Email: {{Userdata.email}}  <br>
+				<b>Phonenumber: {{Userdata.phone}}  <br>
+				<b>Registered since: {{Userdata.registertate}}  <br>
+
+				<button type="button" class="btn btn-danger btn-xs">Delete my profile</button> <button type="button" class="btn btn-warning btn-xs">Edit my profile</button>
+				<br>
+				<br>
+			</div>
+
+		<div class="col-lg-4">
+			{% load staticfiles %}
+        	<img src={% static 'basics/images/profil.jpg' %} height="152"/>	
+       	</div>
+
 	</div>
 {% endblock %}
