--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -10,10 +10,13 @@
         <div class="row">
         	<div class="col-lg-4 col-lg-offset-1">
         		<br>
-				<b>Name: {{Userdata.pseudonym}}</b>  <br>
-				<b>Email: {{Userdata.email}}  <br>
-				<b>Phonenumber: {{Userdata.phone}}  <br>
-				<b>Registered since: {{Userdata.registertate}}  <br>
+        		<b>
+				Name: {{Userdata.pseudonym}} 				<br>
+				Email: {{Userdata.email}}  					<br>
+				Phonenumber: {{Userdata.phone}} 			<br>
+				Registered since: {{Userdata.registertate}}	<br>
+				Default auxiliary radius: 					<br><br>
+				</b>
 
 				<button type="button" class="btn btn-danger btn-xs">Delete my profile</button> <button type="button" class="btn btn-warning btn-xs">Edit my profile</button>
 				<br>
