--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -55,6 +55,12 @@
  		 <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
  			 <ul class="event-list">
  				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">20</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
 
  					 <div class="info">
  						 <h2 class="title">Beispielbeschreibung</h2>
@@ -70,6 +76,12 @@
  				 </li>
 
  				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">20</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
 
  					 <div class="info">
  						 <h2 class="title">Beispielbeschreibung</h2>
@@ -85,6 +97,12 @@
  				 </li>
 
  				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">20</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
 
  					 <div class="info">
  						 <h2 class="title">Beispielbeschreibung</h2>
@@ -100,6 +118,12 @@
  				 </li>
 
  				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">20</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
 
  					 <div class="info">
  						 <h2 class="title">Beispielbeschreibung</h2>
