--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -15,7 +15,8 @@
 				Email: {{Userdata.email}}  					<br>
 				Phonenumber: {{Userdata.phone}} 			<br>
 				Registered since: {{Userdata.registertate}}	<br>
-				Default auxiliary radius: 					<br><br>
+				Default auxiliary radius: 					<br>
+				Notification:								<br><br>
 				</b>
 
 				<button type="button" class="btn btn-danger btn-xs">Delete my profile</button> <button type="button" class="btn btn-warning btn-xs">Edit my profile</button>
