--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -6,6 +6,7 @@
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<title>Act of Goods</title>
 		{% load staticfiles %}
+		<link rel="icon" href="{% static 'basics/images/icon.ico' %}">
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="{% static 'basics/css/bootstrap.min.css' %}">
