--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -2,11 +2,49 @@
 
 {% block content %}
 <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">create new Need</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consec$
-            </div>
-        </div>
+	<div class="modal-dialog" id="sign-up">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="text-center">create new Need</h1>
+			</div>
+			<div class="modal-body">
+				<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
+					<p style="font-size:160%;"> category <p\>
+					<select class="form-control">
+						<option value="Eat & Drink">Eat & Drink</option>
+						<option value="hygiene supplies">hygiene supplies</option>
+						<option value="Medic">Medic</option>
+						<option value="Help">Help</option>
+						<option value="...">...</option>
+						<option value="...">...</option>
+						</select>
+					<p style="font-size:160%;"> description <p\>
+					<div class="form-group">
+	  					<input type="description" class="form-control input-lg" placeholder="description" name="description"/>
+					</div
+					<br>
+					<p style="font-size:160%;"> ranking <p\>
+					<select class="form-control">
+						<option value="life threatening">life threatening</option>
+						<option value="important">life threatening</option>
+						<option value="">Medic</option>
+						<option value="Help">Help</option>
+						<option value="...">...</option>
+						<option value="...">...</option>
+						</select>
+					<p style="font-size:160%;"> description <p\>
+					<div class="form-group">
+	  					<input type="description" class="form-control input-lg" placeholder="description" name="description"/>
+					</div>
+					<br>
+					<div class="form-group">
+						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+    </div>
 {% endblock %}
 
