fix counter bug

--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -289,9 +289,9 @@
 		<p>Number of people who are looking for help:</p>
 		<div id="counter-container">
 			<div id="counter-inner">			
-			<span id="counter">
+			<div id="counter">
 				1000230012	<!-- TODO hier noch die richtige anzahl einfuegen -->
-			</span>
+			</div>
 			</div>
 		</div>
 		<p>Maybe you can help someone in your neighborhood!</p>
