--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -46,7 +46,9 @@
 		/* -------------------------- counter start -------------------------- */
 
 		#counter-container {
-			padding: 20px 20px 30px 20px;
+			/*padding: 20px 20px 30px 20px;*/
+			margin-top: 20px;
+			margin-bottom: 30px;
 			display: table;
 			margin-left: auto;
             margin-right: auto;
