--- a/basics/templates/basics/information_new.html
+++ b/basics/templates/basics/information_new.html
@@ -5,7 +5,11 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">create new Information or Question</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consec$
+                <form class="informationform" role="form" method="post">
+                	{%csrf_token%}
+                	{{info}}
+                	<input type="submit" value="Submit" />
+            	</form>
             </div>
         </div>
 {% endblock %}
