--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -5,7 +5,24 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">get all Needs in your region</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consec$
+                <table class="table table-hover">
+                	<thead>
+                		<tr>
+                			<th>Headline</th>
+                			<th>User</th>
+                			<th>Date</th>
+                		</tr>
+                	</thead>
+                	<tbody>
+		                {% for need in needs%}
+		                <tr>
+		                	<th>{{need.headline}}</th>
+		                	<th>{{need.author.username}}</th>
+		                	<th>{{need.date}}</th>
+		                </tr>
+		                {% endfor %}
+	                </tbody>
+            	</table>
             </div>
         </div>
 {% endblock %}
