--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -12,13 +12,15 @@
 		<link rel="stylesheet" href="{% static 'basics/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'basics/css/event-list.css' %}">
     <link rel="stylesheet" href="{% static 'basics/css/navbar_footer.css' %}">
+	<link rel="stylesheet" href="{% static 'basics/css/startpage.css' %}">
 	<style>
 		* {
 	    		margin: 0;
     			padding: 0;
 		}
-		html, body {
-    			height: 100%;
+		html, body {    	
+			height: 100%;
+			/*font-size: 18px;*/		
 		}
 		#wrapper {
 			position: relative;
@@ -32,109 +34,6 @@
 		#content {
 			margin-bottom: 170px;
 		}
-
-		/* -------------------------- heading and description start -------------------------- */
-
-		#act-of-goods-heading{
-			color: #bbd153;
-			font-size: 84px;
-			font-weight: bold;
-		}
-
-		/* -------------------------- heading and description end -------------------------- */
-
-		/* -------------------------- counter start -------------------------- */
-
-		#counter-container {
-			/*padding: 20px 20px 30px 20px;*/
-			margin-top: 20px;
-			margin-bottom: 30px;
-			display: table;
-			margin-left: auto;
-            margin-right: auto;
-		}
-
-		#counter-inner {
-			display: table-cell;
-		}
-
-		#counter {
-			color:  #D36E5A;
-			font-weight: bold;
-			padding: 15px 20px;
-			background-color: rgba(76,78,73,.05);
-			border-width: 1px;
-			border-style: solid;
-			border-color: rgba(0, 0, 0, 0.15);
-			border-radius: 8px;
-			box-shadow: inset 0px 0px 20px 0px rgba(0,0,0,.1);
-		}		
-
-		/* -------------------------- counter end -------------------------- */
-
-
-		#description-counter-immediate-aid{
-			width: 60%;
-			float: right;
-      margin: 30px auto;
-      margin-top: 30px;
-      margin-right: auto;
-      margin-bottom: 30px;
-      margin-left: auto;
-		}
-
-		#sign-up{
-			width: 34%;
-			float: left;
-		}
-
-	/* -------------------------- immediate help button start -------------------------- */
-
-		#immediate-aid-container {
-			margin-top: 20px;
-			display: table;
-			margin-left: auto;
-            margin-right: 20px;
-		}
-
-		#immediate-aid-inner {
-			display: table-cell;
-		}
-
-		@media(max-width:992px) {
-			
-			#immediate-aid-container {
-				margin-left: auto;
-            	margin-right: auto;
-			}
-
-		}
-
-		.immediate-aid-button {
-			box-shadow: 0 4px 12px rgba(0,0,0,.175);
-			border: 5px solid #D36E5A;
-			font-size: 34px;
-			line-height: 34px;
-			color: #bbd153;
-			background-color: #C7483A;
-			margin: auto;
-			border-radius: 50%;
-			height: 200px;
-			width: 200px;
-			position: relative;
-			padding: 66px 6px;
-			font-weight: bold;
-		}
-
-		.btn-default.immediate-aid-button:hover, .btn-default.immediate-aid-button:focus, .btn-default.immediate-aid-button:active {
-			color:  #bbd153;
-			background-color: #C43B31;
-			text-decoration: none;
-			border-color: #D36E5A;
-		}
-
-	/* -------------------------- immediate help button end -------------------------- */
-
 
 	</style>
 
