--- a/basics/templates/basics/needs_timeline.html
+++ b/basics/templates/basics/needs_timeline.html
@@ -1,12 +1,162 @@
 {% extends 'basics/base.html' %}
 
 {% block content %}
-<!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Timeline for Needs</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consec$
-            </div>
-        </div>
-{% endblock %}
+  <div class="row">
 
+    <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+  	<!--<div class="btn-group">
+    	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      	Action <span class="caret"></span>
+    	</button>
+    	<ul class="dropdown-menu">
+      	<li><a href="#">Action</a></li>
+      	<li><a href="#">Another action</a></li>
+      	<li><a href="#">Something else here</a></li>
+      	<li role="separator" class="divider"></li>
+      	<li><a href="#">Separated link</a></li>
+    	</ul>
+
+  	</div>
+  	-->
+    	<div class="btn-group">
+      	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        	Category <span class="caret"></span>
+      	</button>
+      	<ul class="dropdown-menu">
+        	<li><a href="#">Water</a></li>
+        	<li><a href="#">Energy</a></li>
+        	<li><a href="#">Pokemon</a></li>
+        	<li role="separator" class="divider"></li>
+        	<li><a href="#">Separated link</a></li>
+      	</ul>
+    	</div>
+    	<div class="btn-group pull-right">
+      	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        	Cards per Page <span class="caret"></span>
+      	</button>
+      	<ul class="dropdown-menu">
+        	<li><a href="#">10</a></li>
+        	<li><a href="#">25</a></li>
+        	<li><a href="#">50</a></li>
+        	<li role="separator" class="divider"></li>
+        	<li><a href="#">All</a></li>
+      	</ul>
+    	</div>
+  	</div>
+  </div>
+  <br>
+  <div class="row">
+ 		 <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+ 		 	<p><font color="#FA5858">You need:</font></p>
+ 			 <ul class="event-list">
+ 				 <li>
+
+ 					 <div class="info">
+ 						 <h2 class="title">Beispielüberschrift</h2>
+ 						 <p class="desc">Irgend eine Beschreibung</p>
+        	<ul>
+ 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+ 						 </ul>
+ 					 </div>
+
+ 				 </li>
+ 				 <p><font color="#70962c">You helped:</font></p>
+ 				 <li>
+ 					 <div class="info">
+ 						 <h2 class="title">Toothbrush</h2>
+ 						 <p class="desc">Irgend eine Beschreibung</p>
+ 						 <ul>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
+
+ 				 <p><font color="#FA5858">You need:</font></p>
+ 				 <li>
+ 					 <time datetime="2014-07-20 2000">
+ 						 <span class="day">20</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">8:00 PM</span>
+ 					 </time>
+
+ 					 <div class="info">
+ 						 <h2 class="title">Toothpaste</h2>
+ 						 <p class="desc">Need Toothpaste</p>
+ 						 <ul>
+ 							 <li style="width:33%;">got: 1<span class="glyphicon glyphicon-ok"></span></li>
+ 							 <li style="width:34%;">need: 3<span class="fa fa-question"></span></li>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
+
+ 				 <p><font color="#70962c">You helped:</font></p>
+ 				 <li>
+ 					 <time datetime="2014-07-31 1600">
+ 						 <span class="day">31</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">4:00 PM</span>
+ 					 </time>
+
+ 					 <div class="info">
+ 						 <h2 class="title">Disney Junior Live On Tour!</h2>
+ 						 <p class="desc"> Pirate and Princess Adventure</p>
+ 						 <ul>
+ 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 						 </ul>
+ 					 </div>
+ 					 <div class="social">
+ 						 <ul>
+ 							 <li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+ 							 <li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+ 							 <li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+ 						 </ul>
+ 					 </div>
+ 				 </li>
+ 			 </ul>
+ 		 </div>
+ 	 </div>
+  <div class="row">
+  	<div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ] text-center">
+    	<nav>
+      	<ul class="pagination">
+        	<li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+        	<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+        	<li><a href="#">2</a></li>
+        	<li><a href="#">3</a></li>
+        	<li><a href="#">4</a></li>
+        	<li><a href="#">5</a></li>
+        	<li>
+          	<a href="#" aria-label="Next">
+            	<span aria-hidden="true">&raquo;</span>
+          	</a>
+        	</li>
+      	</ul>
+    	</nav>
+  	</div>
+  </div>
+{% endblock %}
