--- a/basics/templates/basics/needs_timeline.html
+++ b/basics/templates/basics/needs_timeline.html
@@ -50,7 +50,12 @@
  		 	<p><font color="#FA5858">You need:</font></p>
  			 <ul class="event-list">
  				 <li>
-
+ 				 	<time datetime="2014-07-20 2000">
+ 						 <span class="day">31</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">04:20 PM</span>
+ 					 </time>
  					 <div class="info">
  						 <h2 class="title">Beispielüberschrift</h2>
  						 <p class="desc">Irgend eine Beschreibung</p>
@@ -64,14 +69,20 @@
  				 </li>
  				 <p><font color="#70962c">You helped:</font></p>
  				 <li>
+ 				 	<time datetime="2014-07-20 2000">
+ 						 <span class="day">19</span>
+ 						 <span class="month">Jan</span>
+ 						 <span class="year">2014</span>
+ 						 <span class="time">04:20 PM</span>
+ 					 </time>
  					 <div class="info">
  						 <h2 class="title">Toothbrush</h2>
  						 <p class="desc">Irgend eine Beschreibung</p>
  						 <ul>
- 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 							<li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+							<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
  					 <div class="social">
@@ -86,7 +97,7 @@
  				 <p><font color="#FA5858">You need:</font></p>
  				 <li>
  					 <time datetime="2014-07-20 2000">
- 						 <span class="day">20</span>
+ 						 <span class="day">14</span>
  						 <span class="month">Jan</span>
  						 <span class="year">2014</span>
  						 <span class="time">8:00 PM</span>
@@ -113,7 +124,7 @@
  				 <p><font color="#70962c">You helped:</font></p>
  				 <li>
  					 <time datetime="2014-07-31 1600">
- 						 <span class="day">31</span>
+ 						 <span class="day">01</span>
  						 <span class="month">Jan</span>
  						 <span class="year">2014</span>
  						 <span class="time">4:00 PM</span>
@@ -123,10 +134,10 @@
  						 <h2 class="title">Disney Junior Live On Tour!</h2>
  						 <p class="desc"> Pirate and Princess Adventure</p>
  						 <ul>
- 							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
-	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
+ 							<li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
+               				<li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+							<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
  					 <div class="social">
