--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -1,7 +1,34 @@
 
 {% extends 'basics/base.html' %}
+<?php
+        $email;$comment;$captcha;
+        if(isset($_POST['email'])){
+          $email=$_POST['email'];
+        }if(isset($_POST['comment'])){
+          $email=$_POST['comment'];
+        }if(isset($_POST['g-recaptcha-response'])){
+          $captcha=$_POST['g-recaptcha-response'];
+        }
+        if(!$captcha){
+          echo '<h2>Please check the the captcha form.</h2>';
+          exit;
+        }
+        $secretKey = "6LdLNSETAAAAALihggfxC9idnafiO32CB5GsZ6I9";
+        $ip = $_SERVER['REMOTE_ADDR'];
+        $response=file_get_contents("https://www.google.com/recaptcha/api/siteverify?secret=".$secretKey."&response=".$captcha."&remoteip=".$ip);
+        $responseKeys = json_decode($response,true);
+        if(intval($responseKeys["success"]) !== 1) {
+          echo '<h2>You are spammer ! Get the @$%K out</h2>';
+        } else {
+          echo '<h2>Thanks for posting comment.</h2>';
+        }
+?>
 
 {% block content %}
+<head>
+     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+</head>
+  
 <div class="container-fluid" id="wrapper">
 	<div class="row">
 	
@@ -301,9 +328,13 @@
 								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> keep me logged-in
 							</label>
 						</div>
+
+      					<div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8"></div>
+    					
 						<div class="form-group">
 							<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
 						</div>
+
 					</form>
 				</div>
 	
