chat and need_new

--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -33,7 +33,7 @@
         	<li><a href="#">All</a></li>
         	<li><a href="#">Completed</a></li>
         	<li><a href="#">Aktive</a></li>
-        	<li><a href="#">Cancaled</a></li>		
+        	<li><a href="#">Canceled</a></li>		
       	</ul>
     	</div>
 	<div class="btn-group pull-right">
@@ -68,7 +68,6 @@
         	<ul>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
                <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
 	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
@@ -89,7 +88,6 @@
         	<ul>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
                <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
 	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
@@ -110,7 +108,6 @@
         	<ul>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
                <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
 	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
@@ -131,7 +128,6 @@
         	<ul>
  							 <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-pencil"></span> keep writing</a></li>
                <li style="width:20%;"> <span class="glyphicon glyphicon-ok"></span> Completed?</li>
-               <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
 	<li style="width:20%;"> <span class="glyphicon glyphicon-flag"></span> Report</li>
  						 </ul>
  					 </div>
