--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -20,23 +20,15 @@
 						</select>
 					<p style="font-size:160%;"> description <p\>
 					<div class="form-group">
-	  					<input type="description" class="form-control input-lg" placeholder="description" name="description"/>
+						<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea> 
 					</div>
-					<br>
-					<p style="font-size:160%;"> ranking <p\>
-					<select class="form-control">
-						<option value="life threatening">life threatening</option>
-						<option value="important">life threatening</option>
-						<option value="">Medic</option>
-						<option value="Help">Help</option>
-						<option value="...">...</option>
-						<option value="...">...</option>
-						</select>
-					<p style="font-size:160%;"> description <p\>
-					<div class="form-group">
-	  					<input type="description" class="form-control input-lg" placeholder="description" name="description"/>
+					<p style="font-size:160%;"> location <p\>
+					<div class="checkbox" >
+							<label>
+								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> you can use my location
+							</label>
 					</div>
-					<br>
+
 					<div class="form-group">
 						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
 					</div>
