--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -25,7 +25,7 @@
 					<p style="font-size:160%;"> location <p\>
 					<div class="checkbox" >
 							<label>
-								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> you can use my location
+								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> use my current location
 							</label>
 					</div>
 
