--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -1,4 +1,3 @@
-
 {% extends 'basics/base.html' %}
 <?php
         $email;$comment;$captcha;
@@ -329,10 +328,10 @@
 							</label>
 						</div>
 
-      					<div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8"></div>
+							<div class="g-recaptcha" data-sitekey="6LdLNSETAAAAAPANCWc4cOCvtDAL3I6GYWwdI8j8"></div>
     					
 						<div class="form-group">
-							<input type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
+							<input id="sign-up-button" type="submit" class="btn btn-block btn-lg btn-primary" value="Register"/>
 						</div>
 
 					</form>
