--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -2,41 +2,43 @@
 
 {% block content %}
 <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Immediate Aid</h1>
-				<div class="modal-body">
-					<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
-						<p style="font-size:160%;"> description <p\>
-						<div class="form-group">
-		  					<input type="email" class="form-control input-lg" placeholder="Email" name="email"/>
-		  				</div>
-						<p style="font-size:160%;"> category <p\>
-						<select class="form-control">
-							<option value="Eat & Drink">Eat & Drink</option>
-							<option value="hygiene supplies">hygiene supplies</option>
-							<option value="Medic">Medic</option>
-							<option value="Help">Help</option>
-							<option value="...">...</option>
-							<option value="...">...</option>
-							</select>
-						<p style="font-size:160%;"> description <p\>
-						<div class="form-group">
-							<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea> 
-						</div>
-						<p style="font-size:160%;"> location <p\>
-						<div class="checkbox" >
-								<label>
-									<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> use my current location
-								</label>
-						</div>
-	
-						<div class="form-group">
-							<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
-						</div>
-					</form>
-				</div>            
+	<div class="modal-dialog" id="sign-up">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h1 class="text-center">create new Need</h1>
 			</div>
-        </div>
+			<div class="modal-body">
+				<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
+					<p style="font-size:160%;"> email <p\>
+					<div class="form-group">
+		  				<input type="email" class="form-control input-lg" placeholder="Email" name="eamil"/>
+		  			</div>
+					<p style="font-size:160%;"> category <p\>
+					<select class="form-control">
+						<option value="Eat & Drink">Eat & Drink</option>
+						<option value="hygiene supplies">hygiene supplies</option>
+						<option value="Medic">Medic</option>
+						<option value="Help">Help</option>
+						<option value="...">...</option>
+						<option value="...">...</option>
+						</select>
+					<p style="font-size:160%;"> description <p\>
+					<div class="form-group">
+						<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea> 
+					</div>
+					<p style="font-size:160%;"> location <p\>
+					<div class="checkbox" >
+							<label>
+								<input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> use my current location
+							</label>
+					</div>
+
+					<div class="form-group">
+						<input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 {% endblock %}
 
