--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -2,11 +2,45 @@
 
 {% block content %}
 <!-- Introduction Row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Immediate Aid</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consec$
-            </div>
+<div class="modal-dialog" id="sign-up">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h1 class="text-center">create new Need</h1>
+    </div>
+    <div class="modal-body">
+      <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+        {%csrf_token%}
+        <p style="font-size:160%;"> category <p\>
+        <select class="form-control">
+          <option value="Eat & Drink">Eat & Drink</option>
+          <option value="hygiene supplies">hygiene supplies</option>
+          <option value="Medic">Medic</option>
+          <option value="Help">Help</option>
+          <option value="...">...</option>
+          <option value="...">...</option>
+          </select>
+        <p style="font-size:160%;"> description <p\>
+        <div class="form-group">
+          <input type="Email" class="form-control input-lg" placeholder="email" name="email"  rows="4"></textarea>
         </div>
-{% endblock %}
+        <div class="form-group">
+          <input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+        </div>
+        <div class="form-group">
+          <textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4"></textarea>
+        </div>
+        <p style="font-size:160%;"> location <p\>
+        <div class="checkbox" >
+            <label>
+              <input type="checkbox" data-toggle="switch" value="True" name="toggle_button"> use my current location
+            </label>
+        </div>
 
+        <div class="form-group">
+          <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+{% endblock %}
