--- a/basics/templates/basics/needs_new.html
+++ b/basics/templates/basics/needs_new.html
@@ -8,7 +8,8 @@
 				<h1 class="text-center">create new Need</h1>
 			</div>
 			<div class="modal-body">
-				<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
+				<form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+					{%csrf_token%}
 					<p style="font-size:160%;"> category <p\>
 					<select class="form-control">
 						<option value="Eat & Drink">Eat & Drink</option>
@@ -19,8 +20,11 @@
 						<option value="...">...</option>
 						</select>
 					<p style="font-size:160%;"> description <p\>
+						<div class="form-group">
+							<input type="description" class="form-control input-lg" placeholder="headline" name="headline"  rows="4"></textarea>
+						</div>
 					<div class="form-group">
-						<textarea type="description" class="form-control input-lg" placeholder="description" name="description"  rows="4"></textarea> 
+						<textarea type="description" class="form-control input-lg" placeholder="description" name="text"  rows="4"></textarea>
 					</div>
 					<p style="font-size:160%;"> location <p\>
 					<div class="checkbox" >
@@ -37,4 +41,3 @@
 		</div>
 	</div>
 {% endblock %}
-
