--- a/basics/templates/basics/password_reset.html
+++ b/basics/templates/basics/password_reset.html
@@ -9,10 +9,10 @@
   				<h1 class="text-center">Reset Password</h1>
   			</div>
   			<div class="modal-body">
-  				<form class="form" role="form" method="post" action="{% url 'basics:register' %}" accept-charset="UTF-8" id="login-nav">
+  				<form class="form" role="form" method="post" action="{% url 'basics:actofgoods_startpage' %}" accept-charset="UTF-8" id="login-nav">
 	          {% csrf_token %}
 	  				<div class="form-group">
-	  					<input type="email" class="form-control input-lg" placeholder="Email" name="email"/>
+	  					<input type="email" class="form-control input-lg" placeholder="Email" name="email" required/>
 	  				</div>
 	  				<div class="form-group">
 	  					<input type="submit" class="btn btn-block btn-lg btn-primary" value="Send"/>
