--- a/basics/templates/basics/aboutus.html
+++ b/basics/templates/basics/aboutus.html
@@ -6,7 +6,9 @@
                 <h1 class="page-header">About Us
                     <small>It's Nice to Meet You!</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>Welcome to Act Of Goods. <br>
+Our team , which is responsible for the maintenance and design of this site , consists of a chaotic mass of 8 students of the Technical University of Berlin .
+We are proud to present you our concept for a good cause .</p>
             </div>
         </div>
 
@@ -16,60 +18,52 @@
                 <h2 class="page-header">Our Team</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="http://memesvault.com/wp-content/uploads/Best-Meme-Faces-14.png" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="http://memesvault.com/wp-content/uploads/Best-Meme-Faces-14.png" alt="">
                 <h3>Sean McLeish
                     <small>Product Owner</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="https://s-media-cache-ak0.pinimg.com/736x/9b/03/78/9b037851285c9a783b5896392e397321.jpg" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/9b/03/78/9b037851285c9a783b5896392e397321.jpg" alt="">
                 <h3>Paul Neck
-                    <small>Scrum Master</small>
+                    <small>Co-Scrum Master</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" width="200" height="200" src="http://i2.kym-cdn.com/photos/images/facebook/000/232/114/e39.png" alt="">
                 <h3>Phillip Fiala
                     <small>Scrum Master</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="http://i1.kym-cdn.com/entries/icons/original/000/005/742/sweetjesus.jpg" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="http://i1.kym-cdn.com/entries/icons/original/000/005/742/sweetjesus.jpg" alt="">
                 <h3>Thomas Dittrich-Salamon
                     <small>Technology</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width= "200" src="http://memesvault.com/wp-content/uploads/Angry-Girl-Meme-Face-06.jpg" alt="">
+                <img class="img-circle img-responsive img-center" width= "200" height="200" src="http://memesvault.com/wp-content/uploads/Angry-Girl-Meme-Face-06.jpg" alt="">
                 <h3>Sandrine Witt
                     <small>Team Member</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="https://s-media-cache-ak0.pinimg.com/736x/49/47/e4/4947e4530d3ceb72fb163c59bbc626af.jpg" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/49/47/e4/4947e4530d3ceb72fb163c59bbc626af.jpg" alt="">
                 <h3>Johannes-Paul Winkler
                     <small>Team Member</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="http://memesvault.com/wp-content/uploads/Happy-Meme-Faces-Transparent-28.png" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="http://memesvault.com/wp-content/uploads/Happy-Meme-Faces-Transparent-28.png" alt="">
                 <h3>Deniz Riedel
                     <small>Team Member</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" width="200" src="https://s-media-cache-ak0.pinimg.com/736x/36/ae/5a/36ae5aadd62b9ba1767b5dedd50c099c.jpg" alt="">
+                <img class="img-circle img-responsive img-center" width="200" height="200" src="https://s-media-cache-ak0.pinimg.com/736x/36/ae/5a/36ae5aadd62b9ba1767b5dedd50c099c.jpg" alt="">
                 <h3>Victor Rathke
                     <small>Team Member</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
         </div>
 {% endblock %}
